<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/img_login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background_image"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-79dp" />

    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_width="122dp"
        android:layout_height="106dp"
        android:layout_marginTop="56dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_login_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/main_title"
        android:textAllCaps="true"
        android:textColor="@color/title"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_login_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/login_title"
        android:textAllCaps="true"
        android:textColor="@color/title"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_app_title" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="@color/primary300"
        app:layout_constraintBottom_toBottomOf="@+id/img_login_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
        app:layout_constraintVertical_bias="0.372">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_title">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/label_email"
                app:boxBackgroundColor="@color/input_field_background"
                app:boxStrokeColor="@color/primary800">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/input_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/label_password"
                app:boxBackgroundColor="@color/input_field_background"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="@color/primary800"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/input_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_login_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/login_remember_checkbox" />

            <TextView
                android:id="@+id/tv_login_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/label_login_forgot_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login_submit"
                style="@style/PrimaryRoundedButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="12dp"
                android:text="@string/login_title"
                android:textSize="24sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fr_login_loading"
        android:name="com.inetum.realdolmen.crashkit.fragments.LoadingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>